--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "cordova-plugin-facebook",
+    "name": "oktane-cordova-facebook",
     "version": "0.0.1",
     "description": "An Android Cordova plugin that allows users to display simple Toast messages at the bottom of the screen.",
     "cordova": {
-      "id": "cordova-plugin-facebook",
+      "id": "oktane-cordova-facebook",
       "platforms": [
         "android",
         "ios"
